fix: Redundant CSS with the default T&C field's meta causing the checkbox invisible (#1214)

--- a/assets/less/frontend-forms.less
+++ b/assets/less/frontend-forms.less
@@ -2096,6 +2096,3 @@ ul.wpuf-form{
 #wpuf-delete-msg span{
     margin-top: 10px;cursor: pointer
 }
-.wpuf-el.terms_and_conditions  label > input[type=checkbox]{
-    width: 0 !important;
-}
